add(engine): implement stack-based flow engine for Start Automation subroutine execution